# CoPilots

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: XPlaneSDK.cmake  win_exports.def
configs/: README.md  copilots.example.json  manifest.json
configs/Tu154B2/: copilots.json
configs/colimata-concorde/: README.md  copilots.json
configs/ixeg-737-300/: README.md  copilots.json
configs/levelup-737ng/: README.md  copilots.json
src/: Log.cpp  Log.h  plugin.cpp
src/config/: Config.cpp  Config.h  SmartCopilotCompat.cpp  SmartCopilotCompat.h  Zone.h
src/net/: ConfigDownloader.cpp  ConfigDownloader.h  NetThread.cpp  NetThread.h  Protocol.h  Transport.cpp  Transport.h
src/session/: Participant.h  Session.cpp  Session.h
src/sync/: AutoDatarefSync.cpp  AutoDatarefSync.h  DatarefRegistry.cpp  DatarefRegistry.h  FmsPlanSync.cpp  FmsPlanSync.h  PhysicsSync.cpp  PhysicsSync.h  SyncEngine.cpp  SyncEngine.h  WeatherSync.cpp  WeatherSync.h
src/ui/: ConnectionWindow.cpp  ConnectionWindow.h  ImguiBackend.cpp  ImguiBackend.h  LobbyWindow.cpp  LobbyWindow.h  Notepad.h  NotepadWindow.cpp  NotepadWindow.h  StatusHud.cpp  StatusHud.h  Theme.cpp  Theme.h  XPImguiWindow.cpp  XPImguiWindow.h
